--- a/profile.html
+++ b/profile.html
@@ -20,6 +20,6 @@
     </style>
 </head>
 <body>
-<img src="/img/profile.jpg" alt="Заглушка">
+<img src="img/profile.jpg" alt="Заглушка">
 </body>
 </html>
