--- a/profile.html
+++ b/profile.html
@@ -2,24 +2,31 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Заглушка</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f0f0f0;
-        }
-        img {
-            max-width: 100%;
-            max-height: 100%;
-        }
-    </style>
+    <link rel="stylesheet" href="css/app.css">
+    <title>Профиль пользователя</title>
+    <script src="js/app.js"></script>
 </head>
 <body>
-<img src="/img/profile.jpg" alt="Заглушка">
+    <div class="profile-name-card">
+        <strong id="username">Инкогнито</strong>
+        <span class="rating">Рейтинг: 133</span>
+    </div>
+    <div class="profile-vp-cons"></div>
+    <nav class="profile-menu">
+        <ul class="profile-menu-list">
+            <li class="profile-menu-item">VP</li>
+            <li class="profile-menu-item">Бросить вызов</li>
+            <li class="profile-menu-item">Статистика</li>
+        </ul>
+    <footer>
+        <nav class="footer-menu">
+            <ul class="footer-menu-list">
+                <li class="footer-menu-item">Главная страница</li>
+                <li class="footer-menu-item">Профиль</li>
+                <li class="footer-menu-item">Добавить видео</li>
+            </ul>
+        </nav>
+    </footer>
+    </nav>
 </body>
 </html>
