--- a/menu.html
+++ b/menu.html
@@ -5,6 +5,6 @@
   <title>Title</title>
 </head>
 <body>
-  <h1>Меню приложения с возможностью переходов между пунктами</h1>
+  <h1>Меню приложения с возможностью переходов между пунктами(github pages)</h1>
 </body>
 </html>
