--- a/html/battle.html
+++ b/html/battle.html
@@ -5,11 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Youtube Shorts</title>
         <link rel="stylesheet" href="../css/styles.css">
+        <script src="https://telegram.org/js/telegram-web-app.js"></script>
         <script src="../js/script.js"></script>
     </head>
-<body>
+<body onload="battle()">
     <div class="header">
-        <div onclick="redirect('menu')">
+        <div onclick="redirect('index')">
             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
             </svg>
@@ -17,6 +18,14 @@
 
         <div class="headertext">
             Баттл
+        </div>
+    </div>
+    <div>
+        <div class="blue-gradiented-text" style="font-size:3vh;margin: 4vh 0 4vh 4vw;">
+            <i class="asd">{tag}</i>
+        </div>
+
+        <div class="card-grid">
         </div>
     </div>
 </body>
