--- a/html/challenge.html
+++ b/html/challenge.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Challenge</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="../js/script.js"></script>
     <script src="../js/infinite-scroll.js" defer></script>
 </head>
-<body>
+<body onload="getTags()">
     <div class="header">
-        <div onclick="redirect('menu')">
+        <div onclick="redirect('index')">
             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
             </svg>
@@ -20,7 +21,6 @@
             Выбор категории
         </div>
     </div>
-
     <ul class="categories">
         <li class="category-inactive">#beatbox</li>
         <li class="category-inactive">#dance</li>
