--- a/html/menu.html
+++ b/html/menu.html
@@ -5,32 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Page</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="../js/script.js"></script>
 </head>
-<body>
+<body onload="getUserInfo()">
     <div class="about">
-        <div class="avatar"></div>
+        <img src="" class="avatar">
         <div class="wrapper">
-            <div class="name">{name}</div>
-            <div class="rating">Рейтинг: {rating}</div>
+            <div class="name"></div>
+            <div class="rating"></div>
         </div>
     </div>
 
-    <div class="coins">
-        {coins} VPCoins
-    </div>
+    <div class="coins"></div>
 
     <div class="button" onclick="redirect('vp')">
         <p>VP</p>
     </div>
     <div class="button" onclick="redirect('challenge')">
         <p>Бросить вызов</p>
-    </div>
-    <div class="button" onclick="redirect('stats')">
-        <p>Статистика</p>
-    </div>
-    <div class="button" onclick="redirect('yt')">
-        <p>Добавить YT Shorts</p>
     </div>
     <div class="button" onclick="redirect('profile')">
         <p>Профиль</p>
