--- a/html/myvideos.html
+++ b/html/myvideos.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Videos</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="../js/script.js"></script>
     <script src="../js/video-pagination.js" defer></script>
 </head>
-<body>
+<body onload="setcategory(); getUserVideosByTag(getcategory())">
     <div class="header">
         <div onclick="redirect('menu')">
             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
@@ -17,7 +18,7 @@
         </div>
 
         <div class="headertext" style="display:flex;flex-direction: row;">
-            Мои видео &nbsp;<div class="blue-gradiented-text"><i>{tag}</i></div>
+            Мои видео &nbsp;<div class="blue-gradiented-text"><i class="asd"></i></div>
         </div>
     </div>
 
@@ -26,18 +27,8 @@
     </div>
 
     <div class="videos">
-        <div class="video-row">
-            <div id="video" class="marked" onclick="mark(this)"></div>
-            <div id="video" onclick="mark(this)"></div>
-            <div id="video" onclick="mark(this)"></div>
-        </div>
-        <div class="video-row">
-            <div id="video" onclick="mark(this)"></div>
-            <div id="video" onclick="mark(this)"></div>
-            <div id="video" onclick="mark(this)"></div>
-        </div>
     </div>
 
-    <div class="challenge"><div class="challenge-text">Бросить вызов</div></div>
+    <div class="challenge" onclick="appointBattle()"><div class="challenge-text">Бросить вызов</div></div>
 </body>
 </html>
