--- a/html/vp.html
+++ b/html/vp.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VP</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="../js/script.js"></script>
 </head>
-<body>
+<body onload="getCurrentBattlesByTag(); getTags()">
     <div class="header">
         <div onclick="redirect('menu')">
             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
@@ -21,205 +22,9 @@
     </div>
 
     <div class="tags">
-        <div class="tag-active" id="beatbox" onclick="MakeActive('beatbox')">#beatbox</div>
-        <div class="tag-inactive" id="dance" onclick="MakeActive('dance')">#dance</div>
-        <div class="tag-inactive" id="vocal" onclick="MakeActive('vocal')">#vocal</div>
-        <div class="tag-inactive" id="sport" onclick="MakeActive('sport')">#sport</div>
-        <div class="tag-inactive" id="talent" onclick="MakeActive('talent')">#talent</div>
     </div>
 
     <div class="battles">
-        <div class="battle">
-            <div class="battle-left">
-                <div class="battle-about">
-                    <div class="battle-left battle-avatar"></div>
-                    <div class="battle-name">{name}</div>
-                </div>
-                <div class="battle-score">
-                    {score}
-                </div>
-            </div>
-
-            <div class="vs" align="center">vs</div>
-
-            <div class="battle-right">
-                <div class="battle-about">
-                    <div class="battle-avatar"></div>
-                    <div class="battle-name">{name}</div>
-                </div>
-                <div class="battle-score">
-                    {score}
-                </div>
-            </div>
-        </div>
-
-        <div class="battle">
-            <div class="battle-left">
-                <div class="battle-about">
-                    <div class="battle-left battle-avatar"></div>
-                    <div class="battle-name">{name}</div>
-                </div>
-                <div class="battle-score">
-                    {score}
-                </div>
-            </div>
-
-            <div class="vs" align="center">vs</div>
-
-            <div class="battle-right">
-                <div class="battle-about">
-                    <div class="battle-avatar"></div>
-                    <div class="battle-name">{name}</div>
-                </div>
-                <div class="battle-score">
-                    {score}
-                </div>
-            </div>
-        </div>
-
-        <div class="battle">
-            <div class="battle-left">
-                <div class="battle-about">
-                    <div class="battle-left battle-avatar"></div>
-                    <div class="battle-name">{name}</div>
-                </div>
-                <div class="battle-score">
-                    {score}
-                </div>
-            </div>
-
-            <div class="vs" align="center">vs</div>
-
-            <div class="battle-right">
-                <div class="battle-about">
-                    <div class="battle-avatar"></div>
-                    <div class="battle-name">{name}</div>
-                </div>
-                <div class="battle-score">
-                    {score}
-                </div>
-            </div>
-        </div>
-
-        <div class="battle">
-            <div class="battle-left">
-                <div class="battle-about">
-                    <div class="battle-left battle-avatar"></div>
-                    <div class="battle-name">{name}</div>
-                </div>
-                <div class="battle-score">
-                    {score}
-                </div>
-            </div>
-
-            <div class="vs" align="center">vs</div>
-
-            <div class="battle-right">
-                <div class="battle-about">
-                    <div class="battle-avatar"></div>
-                    <div class="battle-name">{name}</div>
-                </div>
-                <div class="battle-score">
-                    {score}
-                </div>
-            </div>
-        </div>
-
-        <div class="battle">
-            <div class="battle-left">
-                <div class="battle-about">
-                    <div class="battle-left battle-avatar"></div>
-                    <div class="battle-name">{name}</div>
-                </div>
-                <div class="battle-score">
-                    {score}
-                </div>
-            </div>
-
-            <div class="vs" align="center">vs</div>
-
-            <div class="battle-right">
-                <div class="battle-about">
-                    <div class="battle-avatar"></div>
-                    <div class="battle-name">{name}</div>
-                </div>
-                <div class="battle-score">
-                    {score}
-                </div>
-            </div>
-        </div>
-
-        <div class="battle">
-            <div class="battle-left">
-                <div class="battle-about">
-                    <div class="battle-left battle-avatar"></div>
-                    <div class="battle-name">{name}</div>
-                </div>
-                <div class="battle-score">
-                    {score}
-                </div>
-            </div>
-
-            <div class="vs" align="center">vs</div>
-
-            <div class="battle-right">
-                <div class="battle-about">
-                    <div class="battle-avatar"></div>
-                    <div class="battle-name">{name}</div>
-                </div>
-                <div class="battle-score">
-                    {score}
-                </div>
-            </div>
-        </div>
-
-        <div class="battle">
-            <div class="battle-left">
-                <div class="battle-about">
-                    <div class="battle-left battle-avatar"></div>
-                    <div class="battle-name">{name}</div>
-                </div>
-                <div class="battle-score">
-                    {score}
-                </div>
-            </div>
-
-            <div class="vs" align="center">vs</div>
-
-            <div class="battle-right">
-                <div class="battle-about">
-                    <div class="battle-avatar"></div>
-                    <div class="battle-name">{name}</div>
-                </div>
-                <div class="battle-score">
-                    {score}
-                </div>
-            </div>
-        </div>
-
-        <div class="battle">
-            <div class="battle-left">
-                <div class="battle-about">
-                    <div class="battle-left battle-avatar"></div>
-                    <div class="battle-name">{name}</div>
-                </div>
-                <div class="battle-score">
-                    {score}
-                </div>
-            </div>
-
-            <div class="vs" align="center">vs</div>
-
-            <div class="battle-right">
-                <div class="battle-about">
-                    <div class="battle-avatar"></div>
-                    <div class="battle-name">{name}</div>
-                </div>
-                <div class="battle-score">
-                    {score}
-                </div>
-            </div>
-        </div>
     </div>
 </body>
 </html>
