--- a/html/challenge.html
+++ b/html/challenge.html
@@ -22,11 +22,11 @@
         </div>
     </div>
     <ul class="categories">
-        <li class="category-inactive">#beatbox</li>
-        <li class="category-inactive">#dance</li>
+        <li class="category-inactive">#random</li>
         <li class="category-inactive">#vocal</li>
         <li class="category-inactive">#sport</li>
-        <li class="category-inactive">#talent</li>
+        <li class="category-inactive">#dance</li>
+        <li class="category-inactive">#beatbox</li>
     </ul>
 </body>
 </html>
