--- a/html/menu.html
+++ b/html/menu.html
@@ -22,11 +22,18 @@
     <div class="button" onclick="redirect('vp')">
         <p>VP</p>
     </div>
+
     <div class="button" onclick="redirect('challenge')">
         <p>Бросить вызов</p>
     </div>
+
     <div class="button" onclick="redirect('profile')">
         <p>Профиль</p>
     </div>
+
+    <div class="button" onclick="redirect('shop')">
+        <p>Магазин</p>
+    </div>
+    
 </body>
 </html>
