--- a/html/profile.html
+++ b/html/profile.html
@@ -36,7 +36,7 @@
         var MainButton = WebApp.MainButton;
         var BackButton = WebApp.BackButton;
 
-        MainButton.text("На главную");
+        MainButton.setText("На главную");
         MainButton.show();
         BackButton.show();
 
