--- a/html/profile.html
+++ b/html/profile.html
@@ -29,9 +29,6 @@
     <div class="videos">        
     </div>
     <script scr="text/javascript">
-        function redirect(url) {
-            window.location.href = url + ".html"
-        }
         var WebApp = window.Telegram.WebApp;
         var MainButton = WebApp.MainButton;
         var BackButton = WebApp.BackButton;
@@ -40,7 +37,7 @@
         MainButton.show();
         BackButton.show();
 
-        MainButton.onClick(redirect("profile"))
+        MainButton.onClick(() => {window.location.href = "menu.html"})
     </script>
 </body>
 </html>
