--- a/html/battle.html
+++ b/html/battle.html
@@ -8,12 +8,10 @@
         <script src="https://telegram.org/js/telegram-web-app.js"></script>
         <script src="../js/script.js"></script>
         <script scr="text/javascript">
-            function redirect(url) {
-                window.location.href = url + ".html"
-            }
             var WebApp = window.Telegram.WebApp;
             var BackButton = WebApp.BackButton;
     
+            BackButton.onClick(() => {window.location.href = 'menu.html'})
             BackButton.show();
     
         </script>
