--- a/html/shop.html
+++ b/html/shop.html
@@ -11,10 +11,12 @@
         <script scr="text/javascript">
             var WebApp = window.Telegram.WebApp;
             var BackButton = WebApp.BackButton;
-    
+            var PopupParams = WebApp.PopupParams;
+
             BackButton.onClick(() => {window.location.href = 'menu.html'})
             BackButton.show();
     
+            PopupParams.title = "Магазин"
         </script>
     </head>
 </head>
