--- a/html/yt.html
+++ b/html/yt.html
@@ -10,10 +10,12 @@
     <script scr="text/javascript">
         var WebApp = window.Telegram.WebApp;
         var BackButton = WebApp.BackButton;
-
+        var PopupParams = WebApp.PopupParams;
+        
         BackButton.onClick(() => {window.location.href = 'menu.html'})
         BackButton.show();
 
+        PopupParams.title = "YouTube Shorts"
     </script>
 </head>
 <body style="height:100vh">
