--- a/html/profile.html
+++ b/html/profile.html
@@ -38,7 +38,7 @@
         MainButton.show();
         BackButton.show();
 
-        MainButton.onClick(() => {window.location.href = "menu.html"})
+        BackButton.onClick(() => {window.location.href = "menu.html"})
 
         PopupParams.title = "Профиль"
     </script>
