--- a/html/challenge.html
+++ b/html/challenge.html
@@ -8,19 +8,18 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="../js/script.js"></script>
     <script src="../js/infinite-scroll.js" defer></script>
+    <script scr="text/javascript">
+        var WebApp = window.Telegram.WebApp;
+        var BackButton = WebApp.BackButton;
+        var PopupParams = WebApp.PopupParams;
+
+        BackButton.onClick(() => {window.location.href = 'menu.html'})
+        BackButton.show();
+        
+        PopupParams.title = "Выбор категории"
+    </script>
 </head>
 <body onload="getTags()">
-    <div class="header">
-        <div onclick="redirect('menu')">
-            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
-            </svg>
-        </div>
-
-        <div class="headertext">
-            Выбор категории
-        </div>
-    </div>
     <ul class="categories">
         <li class="category-inactive">#random</li>
         <li class="category-inactive">#vocal</li>
