--- a/html/myvideos.html
+++ b/html/myvideos.html
@@ -20,20 +20,8 @@
     </script>
 </head>
 <body onload="setcategory(); getUserVideosByTag(getcategory())">
-    <div class="header">
-        <div onclick="redirect('menu')">
-            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
-            </svg>
-        </div>
-
-        <div class="headertext" style="display:flex;flex-direction: row;">
-            Мои видео &nbsp;<div class="blue-gradiented-text"><i class="asd"></i></div>
-        </div>
-    </div>
-
     <div style="margin-top:7vh;font-size:2.5vh;">
-        Выберите видео
+        Выберите видео &nbsp;<div class="blue-gradiented-text"><i class="asd"></i></div>
     </div>
 
     <div class="videos">
