--- a/html/menu.html
+++ b/html/menu.html
@@ -20,19 +20,19 @@
     <div class="coins"></div>
 
     <div class="button" onclick="redirect('vp')">
-        <p class="challenge-text">VP</p>
+        <div class="challenge-text">VP</div>
     </div>
 
     <div class="button" onclick="redirect('challenge')">
-        <p class="challenge-text">Бросить вызов</p>
+        <div class="challenge-text">Бросить вызов</div>
     </div>
 
     <div class="button" onclick="redirect('profile')">
-        <p class="challenge-text">Профиль</p>
+        <div class="challenge-text">Профиль</div>
     </div>
 
     <div class="button" onclick="redirect('shop')">
-        <p class="challenge-text">Магазин</p>
+        <div class="challenge-text">Магазин</div>
     </div>
     
 </body>
