--- a/html/profile.html
+++ b/html/profile.html
@@ -30,12 +30,12 @@
     </div>
     <script scr="text/javascript">
         var WebApp = window.Telegram.WebApp;
-        var MainButton = WebApp.MainButton;
+        // var MainButton = WebApp.MainButton;
         var BackButton = WebApp.BackButton;
         var PopupParams = WebApp.PopupParams;
 
         MainButton.setText("На главную");
-        MainButton.show();
+        // MainButton.show();
         BackButton.show();
 
         BackButton.onClick(() => {window.location.href = "menu.html"})
