--- a/html/profile.html
+++ b/html/profile.html
@@ -8,6 +8,20 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="../js/script.js" defer></script>
     <script src="../js/video-pagination.js" defer></script>
+    <script scr="text/javascript">
+        var WebApp = window.Telegram.WebApp;
+        // var MainButton = WebApp.MainButton;
+        var BackButton = WebApp.BackButton;
+        var PopupParams = WebApp.PopupParams;
+
+        // MainButton.setText("На главную");
+        // MainButton.show();
+        BackButton.show();
+
+        BackButton.onClick(() => {window.location.href = "menu.html"})
+
+        PopupParams.title = "Профиль"
+    </script>
 </head>
 <body onload="getUserInfo(); getUserAllVideos()">
     <div class="about">
@@ -28,20 +42,6 @@
 
     <div class="videos">        
     </div>
-    <script scr="text/javascript">
-        var WebApp = window.Telegram.WebApp;
-        // var MainButton = WebApp.MainButton;
-        var BackButton = WebApp.BackButton;
-        var PopupParams = WebApp.PopupParams;
-
-        MainButton.setText("На главную");
-        // MainButton.show();
-        BackButton.show();
-
-        BackButton.onClick(() => {window.location.href = "menu.html"})
-
-        PopupParams.title = "Профиль"
-    </script>
 </body>
 </html>
 
