--- a/html/profile.html
+++ b/html/profile.html
@@ -21,13 +21,13 @@
 </head>
 <body onload="getUserInfo(); getUserAllVideos()">
     <div class="about">
-        <div class="rating"  style="font-size:2.5vh;
+        <div class="rating"  style="font-size:4vh;
                                     margin:auto;
                                     text-align: center;"></div>
         <img src="" class="avatar">
-        <div class="coins"   style="font-size:2.5vh;
+        <div class="coins"   style="font-size:4vh;
                                     margin:auto;
-                                    text-align: center;;"></div>
+                                    text-align: center;"></div>
     </div>
 
     <div class="name" align="center"></div>
