--- a/html/challenge.html
+++ b/html/challenge.html
@@ -19,7 +19,7 @@
         PopupParams.title = "Выбор категории"
     </script>
 </head>
-<body onload="getTags()">
+<body onload="InfiniteScrollGetTags()">
     <ul class="categories">
         <li class="category-inactive">#random</li>
         <li class="category-inactive">#vocal</li>
