--- a/html/menu.html
+++ b/html/menu.html
@@ -6,7 +6,7 @@
     <title>Main Page</title>
     <link rel="stylesheet" href="../css/styles.css">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="../js/script.js" defer></script>
 </head>
 <body onload="getUserInfo()">
     <div class="about">
