--- a/html/menu.html
+++ b/html/menu.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="../css/styles.css">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="../js/script.js" defer></script>
+    <script scr="text/javascript">
+        var WebApp = window.Telegram.WebApp;
+        var BackButton = WebApp.BackButton;
+        var PopupParams = WebApp.PopupParams;
+
+        BackButton.onClick(() => {window.location.href = 'menu.html'})
+        BackButton.show();
+        
+        PopupParams.title = "Баттл"
+    </script>
 </head>
 <body onload="getUserInfo()">
     <div class="about">
