--- a/html/menu.html
+++ b/html/menu.html
@@ -25,12 +25,12 @@
     <div class="about">
         <img src="" class="avatar">
         <div class="wrapper">
-            <div class="name"></div>
-            <div class="rating"></div>
+            <div class="name"><div style="color:white">undefined</div></div>
+            <div class="rating"><div style="color:white">undefined</div></div>
         </div>
     </div>
 
-    <div class="coins"></div>
+    <div class="coins"><div style="color:white">undefined</div></div>
 
     <div class="button" onclick="redirect('vp')">
         <div class="challenge-text">VP</div>
@@ -47,6 +47,5 @@
     <div class="button" onclick="redirect('shop')">
         <div class="challenge-text">Магазин</div>
     </div>
-    
 </body>
 </html>
