--- a/html/shop.html
+++ b/html/shop.html
@@ -21,6 +21,6 @@
     </head>
 </head>
 <body>
-    <div style="margin: 40vh auto 0 auto; font-size: 3vh;" align="center"><i>Скоро здесь что-нибудь появится...</i></div>
+    <div style="margin: 40vh auto 0 auto; font-size: 3vh;" align="center"><i>Скоро здесь появится информация...</i></div>
 </body>
 </html>
