--- a/html/battle.html
+++ b/html/battle.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="../css/styles.css">
         <script src="https://telegram.org/js/telegram-web-app.js"></script>
         <script src="../js/script.js"></script>
+        <script src="../js/battle.js"></script>
         <script scr="text/javascript">
             var WebApp = window.Telegram.WebApp;
             var BackButton = WebApp.BackButton;
@@ -15,10 +16,9 @@
             BackButton.onClick(() => {window.location.href = 'menu.html'})
             BackButton.show();
             
-            PopupParams.title = "Баттл"
         </script>
     </head>
-<body onload="battle()">
+<body>
     <div>
         <div class="blue-gradiented-text" style="font-size:3vh;margin: 4vh 0 4vh 4vw;">
             <i class="asd"></i>
