--- a/html/menu.html
+++ b/html/menu.html
@@ -19,7 +19,7 @@
 
     <div class="coins"><div style="color:white">undefined</div></div>
 
-    <div class="button" onclick="redirect('vp')">
+    <div class="button" onclick="redirect('vp'); getCurrentBattlesByTag()">
         <div class="challenge-text">VP</div>
     </div>
 
