--- a/html/menu.html
+++ b/html/menu.html
@@ -9,6 +9,7 @@
     <script src="../js/script.js" defer></script>
 </head>
 <body onload="getUserInfo()">
+    <script>window.onload = hideBackButton</script>
     <div class="about">
         <img src="" class="avatar">
         <div class="wrapper">
