--- a/html/battle.html
+++ b/html/battle.html
@@ -9,7 +9,7 @@
         <script src="../js/script.js"></script>
         <script src="../js/battle.js"></script>
     </head>
-<body onload="getBattleById(); getInvitationById()">
+<body onload="checkQueryString()">
     <div>
         <div class="blue-gradiented-text" style="font-size:3vh;margin: 4vh 0 4vh 4vw;">
             <i class="asd"></i>
